# XLang-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: miri.yaml
doc/: doc.typ
examples/: RelationTable.x  alias.x  annotation.x  async.x  auto_capture.x  base64.x  bitwise.x  boundary.x  build_stdlibs.ps1  builtin_modules.x  builtins.x  capture.x  carry.x  class.x  curry.x  fakejson.x  fib.x  function decorator.x  function.x  functional.x  http.x  import.x  interface.x  interface_test.x  iter.x  json.x  lambda.x  lambda_calc.x  lazy.x  libloading.x  list.x  map.x  math.x  mixin.x  module-2.x  module.x  no_seperator.x  object.x  os.x  print.x  (+11 more)
examples/doc/: doc.x
examples/libloading/: libloading.x
examples/stdlib/: builtins.x  class.x  colored_text.x  functools.x  interface.x  match.x  promise.x  stdlib.x  try_catch.x
modules/: functional.x  functional.xir  math.x  math.xir  test.x  test.xir
modules/clambda_lib/: build.sh  vm_ffi.c  vm_ffi.h
modules/clambda_math_lib/: build.sh  math_lib.c  math_lib.h  vm_ffi.c  vm_ffi.h
src/: compile.rs  dir_stack.rs  main.rs
src/lsp/: capabilities.rs  diagnostics.rs  document.rs  handlers.rs  mod.rs  protocol.rs  semantic.rs  server.rs
src/parser/: analyzer.rs  ast.rs  lexer.rs
src/stdlib/: async_request.rs  asyncio.rs  fs.rs  io.rs  mod.rs  os.rs  serialization.rs  string_utils.rs  time.rs  types.rs
src/vm/: instruction_set.rs  ir.rs  ir_translator.rs  mod.rs  opcode.rs
src/vm/executor/: context.rs  ffi.rs  mod.rs  native_function.rs  test.rs  variable.rs  vm.rs  vm_instructions.rs
src/vm/gc/: gc.rs  mod.rs  tests.rs  variable.rs
src/vm/ir_generator/: ir_generator.rs
xlang_frontend/: Cargo.toml  README.md
xlang_frontend/src/: compile.rs
xlang_frontend/src/ir_generator/: ir_generator.rs
xlang_frontend/src/parser/: analyzer.rs  ast.rs
xlang_integration_tests/: Cargo.toml
xlang_integration_tests/src/: lib.rs
xlang_vm_core/: Cargo.toml  README.md
xlang_vm_core/src/: instruction_set.rs  ir.rs  ir_translator.rs  lib.rs
xlang_vm_core/src/executor/: context.rs  ffi.rs  mod.rs  native_function.rs  variable.rs  vm.rs  vm_instructions.rs
xlang_vm_core/src/gc/: gc.rs  mod.rs
