[package]
name = "XLang-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5.32", features = ["derive"] }
rustyline = "15.0.0"
colored = "3.0.0"
dirs = "6.0.0"
rustyline-derive = "0.11.0"
unicode-segmentation = "1.12.0"
base64 = "0.22.1"

[profile.release]
# 保留一些调试信息，帮助排查问题
debug = 1
opt-level = 3
overflow-checks = false
