[package]
name = "XLang-Rust"
version = "0.1.3"
edition = "2021"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5.32", features = ["derive"] }
rustyline = "15.0.0"
colored = "3.0.0"
dirs = "6.0.0"
rustyline-derive = "0.11.0"
unicode-segmentation = "1.12.0"
base64 = "0.22.1"
rustc-hash = "2.1.1"
libloading = "0.8.6"
lazy_static = "1.5.0"
lsp-types = "0.97.0"
lsp-server = "0.7.8"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
url = "2.5.4"
xlang_vm_core = {path = "./xlang_vm_core"}
xlang_frontend = {path = "./xlang_frontend"}
[profile.release]
# 保留一些调试信息，帮助排查问题
debug = 1
opt-level = 3
overflow-checks = false
