[package]
name = "XLang-Rust"
version = "0.1.2"
edition = "2021"
authors = ["sjrsjz <sjrsjz@gmail.com>"]
description = "An experimental cross-platform dynamic strong-typed programming language written in Rust."
license = "MIT"
repository = "https://github.com/sjrsjz/XLang-Rust" 
readme = "README.md"
keywords = ["language", "dynamic", "scripting", "interpreter"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
rustyline = "15.0.0"
colored = "3.0.0"
dirs = "6.0.0"
rustyline-derive = "0.11.0"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
url = "2.5.4"
xlang_frontend = { version = "0.1.0", path = "xlang_frontend" }
xlang_vm_core = { version = "0.1.1", path = "xlang_vm_core" }
rustc-hash = "2.1.1"
base64 = "0.22.1"
reqwest = "0.12.15"
tokio = "1.44.2"
once_cell = "1.21.3"
[profile.release]
# 保留一些调试信息，帮助排查问题
debug = 1
opt-level = 3
overflow-checks = false

[workspace]
members = [
    ".",
    "xlang_vm_core",
    "xlang_frontend",
    "xlang_integration_tests",
]
