[package]
name = "xlang_frontend"
version = "0.1.2"
edition = "2021"
authors = ["sjrsjz <sjrsjz@gmail.com>"]
description = "Frontend for XLang-Rust"
license = "MIT"
repository = "https://github.com/sjrsjz/XLang-Rust" 
readme = "README.md"
keywords = ["language", "dynamic", "scripting", "interpreter"]
categories = ["compilers", "command-line-utilities"]
[dependencies]
base64 = "0.22.1"
colored = "3.0.0"
regex = "1.11.1"
unicode-segmentation = "1.12.0"
xlang_vm_core = { version = "0.1.1", path = "../xlang_vm_core" }
