[package]
name = "xlang_vm_core"
version = "0.1.1"
edition = "2021"
authors = ["sjrsjz <sjrsjz@gmail.com>"]
description = "XLangVM for XLang-Rust"
license = "MIT"
repository = "https://github.com/sjrsjz/XLang-Rust" 
readme = "README.md"
keywords = ["language", "dynamic", "scripting", "interpreter"]
categories = ["compilers", "command-line-utilities"]
[dependencies]
base64 = "0.22.1"
bincode = "1.3"
colored = "3.0.0"
lazy_static = "1.5.0"
libloading = "0.8.6"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
